force-app/main/default/objects/echosign_dev1__Lead_Conversion_Settings__c/echosign_dev1__Lead_Conversion_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Adobe Sign Lead Conversion Settings</label>
</CustomObject>