force-app/main/default/objects/echosign_dev1__Lead_Conversion_Settings__c/fields/echosign_dev1__Contact_Retain_Agreement__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Contact_Retain_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a Lead is converted to an Contact, retain all previous agreements from the Lead with the Contact record.</description>
    <inlineHelpText>When a Lead is converted to an Contact, retain all previous agreements from the Lead with the Contact record.</inlineHelpText>
    <label>Contact Retain Agreement</label>
    <type>Checkbox</type>
</CustomField>