force-app/main/default/objects/echosign_dev1__Lead_Conversion_Settings__c/fields/echosign_dev1__Opportunity_Retain_Agreement__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Opportunity_Retain_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a Lead is converted to an Opportunity, retain all previous agreements from the Lead with the Opportunity record.</description>
    <inlineHelpText>When a Lead is converted to an Opportunity, retain all previous agreements from the Lead with the Opportunity record.</inlineHelpText>
    <label>Opportunity Retain Agreement</label>
    <type>Checkbox</type>
</CustomField>